madp/k8s/madp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: madp 
  namespace: push
spec:
  replicas: 1
  selector:
    matchLabels:
      app: madp
  template:
    metadata:
      labels:
        app: madp
    spec:
      containers:
        - name: madp
          image: kimhr/madp:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: share-volume
              mountPath: /data/share
              readOnly: true
            - name: madp-eventlogs
              mountPath: /home/kimhr/logs
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"              
      volumes:
        - name: share-volume
          hostPath:
            path: /kimhr/work/nas/share
            type: DirectoryOrCreate

        - name: madp-eventlogs
          hostPath:
            path: /kimhr/work/nas/madp
            type: DirectoryOrCreate          

#          resources:
#            requests:
#              cpu: "2.0"
#              memory: "4Gi"
#            limits:
#              cpu: "4.0"
#              memory: "8Gi"
