madp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madp-ingress
  namespace: push
spec:
  ingressClassName: nginx
  rules:
    - host: dev.madp.sophy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madp-svc
                port:
                  number: 8080
